# cargoshipper-mcp

./: .gitignore  .mcp.dev.json  .mcp.uvx.json  CLAUDE.md  README.md  RELEASING.md  install.sh  package.json  pyproject.toml  requirements.txt  setup.bat  setup.sh  test-mcp.js  test_server.py
.github/workflows/: publish.yml
cargoshipper_mcp/: __init__.py  server.py
cargoshipper_mcp/config/: settings.py
cargoshipper_mcp/resources/: __init__.py  cloudflare.py  digitalocean.py  docker.py
cargoshipper_mcp/tools/: __init__.py  cloudflare.py  digitalocean.py  docker.py
cargoshipper_mcp/utils/: __init__.py  auth.py  docker_auth.py  errors.py  formatters.py  token_inspector.py  validation.py
docs/: cloudflare-api-reference.md  digitalocean-api-reference.md  docker-api-reference.md  implementation-guide.md  mcp-architecture.md  tool-catalog.md
